tests/errors/syntax_errors/list_comprehension_no_assign.py
[print(1) for i in range(3)] # pylint: disable=expression-not-assigned
